# can-master

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  platformio.ini  qbt.sh  run.sh
data/: script.js
include/: esp_server.hpp  native_server.hpp  sensor.hpp  server.hpp  web_server_interface.hpp
include/httplib/: httplib.h
include/platform/: dummy_server.hpp  esp_server.hpp
lib/: CMakeLists.txt
lib/inja/: inja.hpp
native/: main.cpp
proc/: build.sh
src/: main.cpp
